# mkcpp

./: Cargo.toml  README.md
src/: main.rs
templates/c/: CMakeLists.txt  Makefile
templates/cpp/: CMakeLists.txt  Makefile
